Code Complete except for Delete APIs
