# swagger.yml
@@ -2,14 +2,13 @@ swagger: "2.0"
 info:
   description: "This is a sample server Petstore server.  You can find out more about     Swagger at [http://swagger.io](http://swagger.io) or on [irc.freenode.net, #swagger](http://swagger.io/irc/).      For this sample, you can use the api key `special-key` to test the authorization     filters."
   version: "1.0.0"
-  title: "Swagger Petstore"
-  termsOfService: "http://swagger.io/terms/"
+  title: "Aspire mini api"
   contact:
-    email: "apiteam@swagger.io"
+    email: "avinragh@gmail.com"
   license:
     name: "Apache 2.0"
     url: "http://www.apache.org/licenses/LICENSE-2.0.html"
-host: "petstore.swagger.io"
+host: "localhost"
 basePath: "/v1"
 tags:
 - name: "loan"
@@ -23,7 +22,7 @@ schemes:
 - "https"
 - "http"
 paths:
-  /v1/Signup:
+  /Signup:
     post:
       tags:
       - "signup"
@@ -76,13 +75,13 @@ definitions:
   Loan:
     type: object
     required:
-      - id
       - amount
       - term
     properties:
       id:
         type: integer
         format: int64
+        x-omitempty: false        
       amount: 
         type: number
         format: double
@@ -91,77 +90,97 @@ definitions:
         format: int
       currency:
         type: string
+        x-omitempty: false       
       state:
         type: string
+        x-omitempty: false
       createdOn:
         type: string
         format: date-time
-        x-go-custom-tag: json:"created_on"
+        x-go-custom-tag: sql:"created_on"
+        x-omitempty: false
       modifiedOn:
         type: string
         format: date-time
-        x-go-custom-tag: json:"modified_on"
+        x-go-custom-tag: sql:"modified_on"
+        x-omitempty: false
       startDate:
         type: string
         format: date-time
-        x-go-custom-tag: json:"start_date"
+        x-go-custom-tag: sql:"start_date"
+        x-omitempty: false
       userId:
         type: integer
         format: int64
-        x-go-custom-tag: json:"user_id"
+        x-go-custom-tag: sql:"user_id"
+        x-omitempty: false
+      installmentsCreated:
+        type: boolean
+        default: false
+        x-go-custom-tag: sql:"installments_created"
+        x-omitempty: false
 
 
   Installment:
     type: object
     required:
-      - id
       - installmentAmount
       - dueDate
     properties:
       id:
         type: integer
         format: int64
+        x-omitempty: false
       installmentAmount:
         type: number
         format: double
+        minimum: 1
       repaymentAmount:
         type: number
         format: double
+        minimum: 0
+        default: 0
+        x-omitempty: false
       dueDate:
         type: string
         format: date-time
       state:
         type: string
+        x-omitempty: false
       createdOn:
         type: string
         format: date-time
         x-go-custom-tag: sql:"created_on"
+        x-omitempty: false
       modifiedOn:
         type: string
         format: date-time
         x-go-custom-tag: sql:"modified_on"
+        x-omitempty: false
       loanId:
         type: integer
         format: int64
+        x-omitempty: false
       repaymentTime:
         type: string
         format: date-time
         x-go-custom-tag: sql:repayment_time"
-
+        x-omitempty: false
 
   User:
     type: object
     required:
-      - id
-      - username
       - email
       - password
+      - role
     properties:
       id:
         type: integer
         format: int64
+        x-omitempty: false
       username:
         type: string
+        x-omitempty: false
       email:
         type: string
       role:
@@ -170,10 +189,12 @@ definitions:
         type: string
         format: date-time
         x-go-custom-tag: sql:"created_on"
+        x-omitempty: false
       modifiedOn:
         type: string
         format: date-time
         x-go-custom-tag: sql:"modified_on"
+        x-omitempty: false
       password:
         type: string
   
@@ -198,36 +219,10 @@ definitions:
         type: string
       role:
         type: string
+        x-omitempty: false        
       tokenString:
         type: string
 
-  FindLoansParams:
-    type: object
-    properties:
-      userId:
-        type: string
-      state:
-        type: string
-      sort:
-        type: string
-      limit:
-        type: string
-      page:
-        type: string
-
-  FindInstallmentsParams:
-    type: object
-    properties:
-      loanId:
-        type: string
-      state:
-        type: string
-      sort:
-        type: string
-      limit:
-        type: string
-      page: 
-        type: string
 
   RepaymentRequest:
     type: object
@@ -238,15 +233,19 @@ definitions:
         type: number
         format: double
 
+
   ErrorResponse:
     type: object
     properties:
       code:
         type: string
+        x-omitempty: false
       message:
         type: string
+        x-omitempty: false
       detail:
         type: string
+        x-omitempty: false
 
 
 
